--- a/src/pages/playradio/playradio.html
+++ b/src/pages/playradio/playradio.html
@@ -16,4 +16,5 @@
 <ion-content padding>
    
     <audio  src="http://192.99.150.42:9688/;" controls></audio>
+    <button ion-button (click)="staff()">staff</button>
 </ion-content>
