--- a/src/pages/modalpage/modalpage.html
+++ b/src/pages/modalpage/modalpage.html
@@ -18,30 +18,31 @@
             </button>
           </ion-buttons>
 
-          <h4 class="title_profile">{{datos2.name}}</h4>
-          <span class="ocupation_prof"> <ion-icon name="pricetags"></ion-icon> {{datos2.cargo}}</span>
+          <!--<h4 class="title_profile">{{datos2.name}}</h4>
+          <span class="ocupation_prof">{{datos2.cargo}}</span>-->
     </div>
 
     <div class="cont" padding>
           <ion-grid>
             <ion-row>
               <ion-col>
+                <div float-left>
+                    <h3 class="prof_title">{{datos2.name}}</h3>
+                </div>
                 <div class="icon" float-right>
                     <ion-icon ios="logo-facebook" md="logo-facebook" color="primary"></ion-icon>
                     <ion-icon ios="logo-youtube" md="logo-youtube"></ion-icon>
                     <ion-icon ios="logo-instagram" md="logo-instagram"></ion-icon>
-               
                 </div>
                   </ion-col>
             </ion-row>
             
             <ion-row>
-              <ion-col>
-                   <h5>Sobre mi</h5>
-                   <p>{{datos2.quote}}</p>
+               <ion-col>                  
+                   <p class="desc_prof">{{datos2.quote}}</p>
                    <p><ion-icon name="mail"></ion-icon> Email@farodeesperanza.com </p>
                    <p><ion-icon name="pin"></ion-icon> Buenaventura-Valle</p>
-                  </ion-col>
+                </ion-col>
             </ion-row>
           </ion-grid>
     </div>
