--- a/src/pages/playradio/playradio.html
+++ b/src/pages/playradio/playradio.html
@@ -17,5 +17,5 @@
    
     <audio  src="http://192.99.150.42:9688/;" controls></audio>
     <button ion-button (click)="staff()">staff</button>
-    <button ion-button (click)="programas()">staff</button>
+    <button ion-button (click)="programas()">Programas</button>
 </ion-content>
